--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-  cursor: none;
+  cursor: auto;
 }
 
 .backface-hidden {
@@ -38,7 +38,7 @@ body {
 }
 
 a, button, [role="button"] {
-  cursor: none;
+  cursor: pointer;
 }
 
 @media (max-width: 768px) {
